feat(getNameArtist): function that takes artist names and returns their ID
