# src/server.ts
@@ -2,6 +2,9 @@ import express from 'express';
 import UserRouters from './routers/user.js';
 import AdminRouters from './routers/admin/admin.js';
 import ArtistRouters from './routers/artists/artist.js';
+import SongsRouter from './routers/artists/songs/song.js';
+import AlbunsRouter from './routers/artists/albuns/album.js'
+
 import { authMiddleware } from './middlewares/auth.js';
 import YAML from 'yamljs';
 import swaggerUi from 'swagger-ui-express';
@@ -15,7 +18,8 @@ server.use(express.json())
 
 server.use('/user', UserRouters);
 server.use('/admin', AdminRouters);
-server.use("/artist",authMiddleware, ArtistRouters);
+server.use("/artist",authMiddleware, SongsRouter || ArtistRouters || AlbunsRouter );
+
 
 //desta maneira ele detecta as mudanças no arquivo swagger.yaml
 server.use('/api-docs',swaggerUi.serve,(req: Request, res: Response, next: NextFunction) => {
